--- a/Makefile.psp
+++ b/Makefile.psp
@@ -7,6 +7,8 @@ UXCORE_O	=	source/uxcode.o \
 				source/uximages.o \
 				source/uxvertex.o \
 				source/uxgraphics.o \
+				source/uxdraw.o \
+				source/uxdisc.o \
 				source/uxmath.o \
 				source/uxstrings.o \
 				source/uxrtc.o \
