--- a/Makefile.psp
+++ b/Makefile.psp
@@ -36,7 +36,7 @@ ASFLAGS 			= $(CFLAGS)
 OBJS 				= $(COMMON_O)
 
 LIBRERIAS 			= -lpspsystemctrl_kernel -lpspgum -lpspge -lpspgum_vfpu -lpspgu -lpsppower \
-					  -lpspumd -lpsphprm -lpspaudio -lpspaudiocodec -lpspmath -lpspusbdevice -lpspusb \
+					  -lpspumd -lpsphprm -lpspaudio -lpspaudiocodec -lpspmp3 -lpspmath -lpspusbdevice -lpspusb \
 					  -lpspusbstor -lpspusbcam -lpsputility -lpspwlan -lpspkubridge -lpng -ljpeg -lz \
 					  -lpsprtc -lpspssl -lpsphttp -lm -lpspsdk -lpspjpeg -lzzip -lpspopenpsid
 LIBS				= $(LIBRERIAS)
